# SmartNotes

./: .pre-commit-config.yaml  Makefile  README.md  config.toml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: e761509fa24a_init_schema.py  f6a2072f5546_init_schema.py
scripts/: smoke.sh
smartnotes/: cli.py  config.py  db.py  doctor.py  log.py  models.py  utils.py
smartnotes/llm/: base.py  factory.py  local.py  openai.py
smartnotes/reporters/: report.py
smartnotes/services/: embeddings.py  enrich.py  ingest.py  scheduler.py  watcher.py
tests/: conftest.py  test_cli.py  test_doctor.py  test_embeddings.py  test_ingest.py  test_llm.py  test_scheduler.py
